--- a/css/main.css
+++ b/css/main.css
@@ -54,8 +54,9 @@ article, aside, details, figcaption, figure, footer, header, hgroup, main, menu,
   display: block;
 }
 
+/*$icons-spacing: 30px;*/
 .icons-sprite, .phone .mail:before, .phone .number:before, .icons .facebook, .icons .gplus, .icons .twitter, .icons .pinterest, .icons .behance, .icons .dribbble, .header-find:after, .content-info .latest-works .content-passion:before, .content-info .latest-works .content-creativity:before, .content-info .latest-works .content-quality:before, .footer .footer-info .reen .footer-logo .data:after, .footer .footer-info .reen .footer-touch .search:before, .footer .footer-info .reen .footer-touch .mobile:before, .footer .footer-info .reen .footer-touch .mailto:before {
-  background-image: url('../img/icons-s025d27e847.png');
+  background-image: url('../img/icons-sf7875a0d34.png');
   background-repeat: no-repeat;
 }
 
@@ -245,7 +246,7 @@ a {
 }
 
 .main-content {
-  height: 882px;
+  min-height: 882px;
   margin-top: 35px;
   background: url("/img/img-content.jpg") no-repeat 0 0;
   position: relative;
@@ -286,7 +287,7 @@ a {
 }
 
 .content-info {
-  height: 673px;
+  padding-bottom: 15px;
 }
 .content-info .main-info {
   width: 50%;
@@ -350,6 +351,7 @@ a {
   top: 0;
   left: -75px;
   height: 67px;
+  width: 46px;
 }
 .content-info .latest-works .content-quality:before {
   background-position: 0 -77px;
@@ -427,28 +429,6 @@ a {
 }
 .general-info .slider .img li:first-child {
   margin-left: 0;
-}
-.general-info .slider .dots {
-  width: 10%;
-  margin: auto;
-}
-.general-info .slider .dots .control-dots {
-  border: 1px solid #506a85;
-  border-radius: 20px;
-  background-color: #506a85;
-  width: 15px;
-  height: 15px;
-  display: inline-block;
-  margin-left: 10px;
-}
-.general-info .slider .dots .active {
-  border: 1px solid #00bc9c;
-  border-radius: 20px;
-  background-color: #00bc9c;
-  width: 15px;
-  height: 15px;
-  display: inline-block;
-  margin-left: 10px;
 }
 
 .information {
@@ -559,6 +539,8 @@ a {
   display: inline-block;
   margin-bottom: 10px;
   position: relative;
+  color: #a3b1bf;
+  font-size: 14px;
 }
 .footer .footer-info .reen .footer-touch .search:before {
   content: '';
@@ -611,10 +593,15 @@ a {
 .footer .footer-info .reen .footer-updates .footer-subscribe .email {
   background-color: #4e5c6c;
   display: block;
-  width: 100%;
+  width: 157px;
   height: 40px;
   border: 1px solid #4e5c6c;
   border-radius: 3px;
+  padding-right: 100px;
+  padding-left: 10px;
+  color: #828e99;
+  text-transform: capitalize;
+  font-size: 14px;
 }
 .footer .footer-info .reen .footer-updates .footer-subscribe .submit {
   position: absolute;
@@ -642,15 +629,30 @@ a {
 }
 .footer .footer-menu .footer-contact .footer-nav li {
   display: inline-block;
-  padding-left: 25px;
+  margin-left: 25px;
 }
 .footer .footer-menu .footer-contact .footer-nav a {
   color: #707e8c;
   font-size: 14px;
+}
+.footer .footer-menu .footer-contact .copyright {
+  float: left;
 }
 .footer .footer-menu .footer-contact .copyright p {
   color: #707e8c;
   font-size: 14px;
   display: inline-block;
   margin-top: 35px;
+}
+
+.bx-wrapper .bx-pager.bx-default-pager a {
+  border-radius: 20px;
+  background-color: #506a85;
+  width: 15px;
+  height: 15px;
+  display: inline-block;
+  margin-left: 10px;
+}
+.bx-wrapper .bx-pager.bx-default-pager a.active {
+  background-color: #00bc9c;
 }
