--- a/scss/main.scss
+++ b/scss/main.scss
@@ -260,7 +260,7 @@ a {
 }
 
 .content-info {
-  padding-bottom: 15px;
+  padding-bottom: 30px;
 
   .main-info {
     width: 50%;
@@ -287,7 +287,7 @@ a {
     .content {
       &-passion, &-creativity, &-quality {
         width: 26%;
-        margin-left: 130px;
+        margin-left: 10%;
         display: inline-block;
         margin-top: 80px;
 
@@ -344,8 +344,8 @@ a {
   }
 }
 .general-info {
-  height: 1270px;
   background-color: #f2f5f7;
+  padding-bottom: 20px;
   .slogan {
     width: 50%;
     margin: auto;
@@ -591,7 +591,7 @@ a {
             border-radius: 3px;
             padding: 10px;
             top: 4px;
-            right: 0;
+            right: 10px;
             cursor: pointer;
           }
         }
@@ -646,7 +646,20 @@ a {
   }
 }
 
+@media screen and (max-width: 1585px) {
+  .menu {
+    margin-left: 2%;
+    li {
+      margin-left: 20px;
+    }
+  }
+}
 
+/*
+@media screen and (min-width: 320px) and (max-width: 800px) {
+
+}
+*/
 
 
 
