--- a/css/main.css
+++ b/css/main.css
@@ -287,7 +287,7 @@ a {
 }
 
 .content-info {
-  padding-bottom: 15px;
+  padding-bottom: 30px;
 }
 .content-info .main-info {
   width: 50%;
@@ -313,7 +313,7 @@ a {
 }
 .content-info .latest-works .content-passion, .content-info .latest-works .content-creativity, .content-info .latest-works .content-quality {
   width: 26%;
-  margin-left: 130px;
+  margin-left: 10%;
   display: inline-block;
   margin-top: 80px;
 }
@@ -360,8 +360,8 @@ a {
 }
 
 .general-info {
-  height: 1270px;
   background-color: #f2f5f7;
+  padding-bottom: 20px;
 }
 .general-info .slogan {
   width: 50%;
@@ -612,7 +612,7 @@ a {
   border-radius: 3px;
   padding: 10px;
   top: 4px;
-  right: 0;
+  right: 10px;
   cursor: pointer;
 }
 .footer .footer-menu {
@@ -656,3 +656,17 @@ a {
 .bx-wrapper .bx-pager.bx-default-pager a.active {
   background-color: #00bc9c;
 }
+
+@media screen and (max-width: 1585px) {
+  .menu {
+    margin-left: 2%;
+  }
+  .menu li {
+    margin-left: 20px;
+  }
+}
+/*
+@media screen and (min-width: 320px) and (max-width: 800px) {
+
+}
+*/
