--- a/scss/main.scss
+++ b/scss/main.scss
@@ -16,7 +16,7 @@ $icons-layout: smart;
 }
 
 .contacts {
-  width: 80%;
+  width: 94%;
   margin: auto;
   padding-top: 10px;
   &-inner {
@@ -121,7 +121,7 @@ a {
 }
 
 .menu-inner {
-  width: 80%;
+  width: 94%;
   margin: auto;
 }
 
@@ -136,6 +136,9 @@ a {
     list-style: none;
     margin-left: 45px;
     position: relative;
+    &:first-child {
+      margin-left: 0;
+    }
   }
 
    & > li {
@@ -366,7 +369,7 @@ a {
     }
   }
   .works {
-    width: 70%;
+    width: 90%;
     margin: auto;
     text-align: center;
     .frame-latest, .frame {
@@ -377,6 +380,12 @@ a {
       margin-bottom: 80px;
       .works-img, .works-img-2 {
         margin-bottom: 35px;
+        max-width: 570px;
+        max-height: 390px;
+        img {
+          max-height: 100%;
+          max-width: 100%;
+        }
       }
       h4 {
         color: #506a85;
@@ -569,6 +578,7 @@ a {
         }
         .footer-subscribe {
           position: relative;
+          width: 260px;
           .email {
             background-color: #4e5c6c;
             display: block;
@@ -591,7 +601,7 @@ a {
             border-radius: 3px;
             padding: 10px;
             top: 4px;
-            right: 10px;
+            right: -5px;
             cursor: pointer;
           }
         }
@@ -601,7 +611,7 @@ a {
 
   .footer-menu {
     background-color: #283645;
-    height: 83px;
+    min-height: 83px;
     .footer-contact {
       width: 80%;
       margin: auto;
@@ -651,11 +661,650 @@ a {
   }
 }
 
-/*
-@media screen and (min-width: 320px) and (max-width: 800px) {
-
+@media screen and (max-width: 960px) {
+  .main-content .content {
+    h1 {
+      font-size: 65px;
+    }
+    p {
+      font-size: 20px;
+    }
+    .button {
+      font-size: 14px;
+      padding: 18px 38px;
+    }
+  }
 }
-*/
+@media screen and (max-width: 565px) {
+  .main-content .content {
+    h1 {
+      font-size:50px;
+    }
+    p {
+      font-size: 18px;
+    }
+    .button {
+      padding: 13px 25px;
+      font-size: 12px;
+    }
+  }
+}
+@media screen and (max-width: 1145px) {
+  .content-info .main-info {
+    width: 54%;
+  }
+}
+@media screen and (max-width: 800px) {
+  .content-info .main-info {
+    width: 54%;
+    h2 {
+      font-size: 38px;
+    }
+    p {
+      font-size: 20px;
+    }
+  }
+}@media screen and (max-width: 676px) {
+  .content-info .main-info {
+    width: 54%;
+    h2 {
+      font-size: 30px;
+    }
+    p {
+      font-size: 16px;
+    }
+  }
+}
 
+@media screen and (max-width: 460px) {
+  .content-info .main-info {
+    width: 54%;
+    h2 {
+      font-size: 27px;
+    }
+    p {
+      font-size: 15px;
+    }
+  }
+}
+@media screen and (max-width: 1368px) {
+  .content-info .latest-works {
+    width: 80%;
+  }
+}
+@media screen and (max-width: 1200px) {
+  .content-info .latest-works {
+    width: 86%;
+    .content {
+      &-passion, &-creativity, &-quality {
+        &:before {
+          background-size: 35px;
+        }
+      }
+      &-passion {
+        &:before {
+          top: 0;
+          background-position: 0 -13px;
+          width: 36px;
+          height: 31px;
+          left: -46px;;
+        }
+      }
+      &-creativity {
+        &:before {
+          top: 0;
+          background-position: 0 -74px;
+          width: 26px;
+          height: 38px;
+          left: -39px;
+        }
+      }
+      &-quality {
+        &:before {
+          top: 0;
+          background-position: 0 -44px;
+          width: 36px;
+          height: 30px;
+          left: -46px;
+        }
+      }
+    }
+  }
+}
+@media screen and (max-width: 1116px) {
+  .content-info .latest-works {
+    width: 95%;
+    .content {
+      &-passion, &-creativity, &-quality {
+        margin-left: 5%;
+      }
+    }
+  }
+}
+@media screen and (max-width: 882px) {
+  .content-info .latest-works {
+    .content {
+      &-passion, &-creativity, &-quality {
+        width: 44%;
+      }
+    }
+  }
+}
+@media screen and (max-width: 604px) {
+  .content-info .latest-works {
+    width: 90%;
+  }
+}
+@media screen and (max-width: 555px) {
+  .content-info .latest-works {
+    .content {
+      &-passion, &-creativity, &-quality {
+        h3 {
+          font-size: 22px;
+        }
+        p {
+          font-size: 13px;
+        }
+        &:before {
+          background-size: 25px;
+        }
+      }
+      &-passion {
+        &:before {
+          top: 0;
+          background-position: 0 -10px;
+          width: 36px;
+          height: 21px;
+          left: -46px;;
+        }
+      }
+      &-creativity {
+        &:before {
+          top: 0;
+          background-position: 0 -53px;
+          width: 18px;
+          height: 38px;
+          left: -39px;
+        }
+      }
+      &-quality {
+        &:before {
+          top: 0;
+          background-position: 0 -31px;
+          width: 36px;
+          height: 21px;
+          left: -46px;
+        }
+      }
+    }
+  }
+}
+@media screen and (max-width: 474px) {
+  .content-info .latest-works {
+    .content {
+      &-passion, &-creativity, &-quality {
+        width: 95%;
+      }
+      &-passion {
+        margin-left: 5%;
+      }
+    }
+  }
+}
+@media screen and (max-width: 604px) {
+  .content-info .latest-works {
+    padding-left: 30px;
+  }
+}
+@media screen and (max-width: 1324px) {
+  .general-info .works .frame {
+    margin-left: 0;
+  }
+}
+  @media screen and (max-width: 802px) {
+    .general-info .slogan {
+      p {
+        font-size: 21px;
+      }
+    }
+  }
+  @media screen and (max-width: 768px) {
+    .general-info .slogan {
+      p {
+        font-size: 20px;
+      }
+      h2 {
+        font-size: 38px;
+      }
+    }
+  }
+  @media screen and (max-width: 577px) {
+    .general-info .slogan {
+      p {
+        font-size: 15px;
+      }
+      h2 {
+        font-size: 30px;
+      }
+    }
+  }
+  @media screen and (max-width: 436px) {
+    .general-info .slogan {
+      p {
+        font-size: 14px;
+      }
+      h2 {
+        font-size: 28px;
+      }
+    }
+  }
+  @media screen and (max-width: 408px) {
+    .general-info .slogan {
+      p {
+        font-size: 13px;
+      }
+      h2 {
+        font-size: 25px;
+      }
+    }
+  }
+  @media screen and (max-width: 1496px) {
+    .information .information-content {
+      p {
+        font-size: 20px;
+      }
+    }
+  }
+  @media screen and (max-width: 1073px) {
+    .information .information-content {
+      p {
+        font-size: 19px;
+      }
+      h2 {
+        font-size: 35px;
+      }
+      .button-info {
+        padding: 15px;
+        font-size: 15px;
+      }
+    }
+  }
+  @media screen and (max-width: 912px) {
+    .information .information-content {
+      p {
+        font-size: 19px;
+      }
+      h2 {
+        font-size: 30px;
+      }
+      .button-info {
+        padding: 12px;
+        font-size: 14px;
+      }
+    }
+  }
+  @media screen and (max-width: 624px) {
+    .information .information-content {
+      p {
+        font-size: 16px;
+      }
+      h2 {
+        font-size: 25px;
+      }
+      .button-info {
+        padding: 12px;
+        font-size: 14px;
+      }
+    }
+  }
+  @media screen and (max-width: 489px) {
+    .information .information-content {
+      p {
+        font-size: 13px;
+      }
+      h2 {
+        font-size: 23px;
+      }
+      .button-info {
+        padding: 10px;
+        font-size: 12px;
+      }
+    }
+  }
+@media screen and (max-width: 1611px) {
+  .footer .footer-info .reen .footer-latest-works {
+    width: 21%;
+  }
+}
+@media screen and (max-width: 1535px) {
+  .footer .footer-info .reen {
+    .footer-logo {
+      width: 30%;
+      margin-bottom: 55px;
+    }
+    .footer-latest-works {
+      width: 30%;
+    }
+    .footer-touch {
+      width: 25%;
+    }
+    .footer-updates {
+      margin-left: 0;
+      width: 25%;
+    }
+  }
+}
+@media screen and (max-width: 1432px) {
+  .footer .footer-info .reen {
+    .footer-touch {
+      width: 23%;
+    }
+  }
+}
+@media screen and (max-width: 1254px) {
+  .footer .footer-info .reen {
+    .footer-logo {
+      width: 50%;
+    }
+    .footer-latest-works {
+      width: 38%;
+    }
+    .footer-touch {
+      width: 55%;
+      margin-left: 0;
+      .mobile {
+        display: block;
+      }
+    }
+    .footer-updates {
+      width: 37%;
+      margin-left: 30px;
+    }
+  }
+}
+@media screen and (max-width: 894px) {
+  .footer .footer-info .reen {
+    .footer-logo {
+      width: 40%;
+    }
+    .footer-touch {
+      width: 47%;
+    }
+  }
+}
+@media screen and (max-width: 855px) {
+  .footer .footer-info .reen {
+    h4 {
+      font-size: 14px;
+    }
+    p {
+      font-size: 12px;
+    }
+    a {
+      font-size: 12px;
+    }
+    .footer-logo {
+      width: 35%;
+    }
+    .footer-latest-works {
+      width: 40%;
+    }
+    .footer-touch {
+      width: 42%;
+      .search {
+        font-size: 13px;
+      }
+    }
+    .footer-updates {
+      width: 36%;
+      .footer-subscribe .email {
+        width: 125px;
+        height: 30px;
+        font-size: 12px;
+      }
+      .footer-subscribe .submit {
+        font-size: 10px;
+        padding: 6px;
+        right: 27px;
+      }
+    }
+  }
+}
+@media screen and (max-width: 813px) {
+  .footer .footer-info .reen {
+    .footer-logo {
+      width: 31%;
+    }
+    .footer-latest-works {
+      width: 41%;
+    }
+  }
+}
+@media screen and (max-width: 793px) {
+  .footer .footer-info .reen {
+    width: 88%;
+    .footer-logo {
+      width: 40%;
+    }
+    .footer-latest-works {
+      width: 45%;
+    }
+    .footer-touch {
+      width: 35%;
+    }
+    .footer-updates {
+      width: 40%;
+      margin-left: 116px;
+    }
+  }
+}
+@media screen and (max-width: 749px)  {
+  .footer .footer-info .reen {
+    width: 85%;
+  }
+}
 
-
+@media screen and (max-width: 653px) {
+  .footer .footer-info .reen {
+    width: 89%;
+    .footer-logo {
+      width: 39%;
+    }
+    .footer-touch {
+      width: 32%;
+    }
+  }
+}
+@media screen and (max-width: 650px) {
+  .footer .footer-info .reen {
+    .footer-latest-works {
+      width: 46%;
+    }
+  }
+}
+@media screen and (max-width: 644px) {
+  .footer .footer-info .reen {
+    .footer-logo {
+      width: 29%;
+    }
+    .footer-latest-works {
+      width: 50%;
+    }
+    .footer-updates {
+      margin-left: 60px;
+    }
+  }
+}
+@media screen and (max-width: 627px) {
+  .footer .footer-info .reen {
+    padding: 5%;
+    .footer-touch {
+      width: 35%;
+    }
+  }
+}
+@media screen and (max-width: 589px) {
+  .footer .footer-info .reen {
+    width: 90%;
+  }
+}
+@media screen and (max-width: 525px) {
+  .footer .footer-info .reen {
+    padding: 20px;
+    .footer-latest-works {
+      width: 51%;
+      margin-left: 60px;
+    }
+  }
+}
+@media screen and (max-width: 513px) {
+  .footer .footer-info {
+    h4 {
+      margin-bottom: 18px;
+    }
+    .reen {
+      .footer-updates {
+        width: 27%;
+        margin-left: 31px;
+        .footer-subscribe .email {
+          width: 80px;
+          height: 27px;
+          font-size: 12px;
+        }
+        .footer-subscribe .submit {
+          font-size: 8px;
+          padding: 7px;
+          right: 72px;
+          top: 2px;
+        }
+      }
+      .footer-latest-works {
+        width: 58%;
+      }
+      .footer-touch {
+        width: 40%;
+      }
+    }
+  }
+}
+@media screen and (max-width: 510px) {
+  .footer .footer-info .reen{
+    .footer-logo {
+      width: 90%;
+    }
+    .footer-latest-works {
+      width: 70%;
+      margin-left: 0;
+      margin-bottom: 15px;
+    }
+    .footer-touch {
+      width: 90%;
+      margin-bottom: 15px;
+      .mobile {
+        display: block;
+      }
+    }
+    .footer-updates {
+      width: 85%;
+      margin-left: 0;
+    }
+  }
+}
+@media screen and (max-width: 414px) {
+  .footer .footer-info .reen{
+    .footer-latest-works {
+      width: 75%;
+    }
+    .footer-updates {
+      .footer-subscribe .email {
+        margin-bottom: 10px;
+      }
+    }
+  }
+}
+@media screen and (max-width: 393px) {
+  .footer .footer-info .reen {
+    .footer-latest-works {
+      width: 80%;
+    }
+  }
+}
+@media screen and (max-width: 792px) {
+  .footer .footer-menu .footer-contact {
+    width: 90%;
+  }
+}
+@media screen and (max-width: 713px) {
+  .footer .footer-menu .footer-contact {
+    width: 95%;
+    .copyright {
+      p {
+        font-size: 12px;
+      }
+    }
+    .footer-nav {
+      a {
+        font-size: 12px;
+      }
+    }
+  }
+}
+@media screen and (max-width: 614px) {
+  .footer .footer-menu .footer-contact {
+    .footer-nav li {
+      margin-left: 20px;
+    }
+    .copyright p {
+      margin-top: 39px;
+    }
+  }
+}
+@media screen and (max-width: 616px)  {
+  .footer .footer-menu .footer-contact {
+    .footer-nav{
+      li:first-child {
+        margin-left: 0;
+      }
+    }
+  }
+}
+@media screen and (max-width: 561px) {
+  .footer .footer-menu .footer-contact {
+    text-align: center;
+    padding-top: 5px;
+    .copyright {
+      float: none;
+    }
+    .footer-nav {
+      float: none;
+      margin-top: 0;
+    }
+  }
+}
+@media screen and (max-width: 1047px) {
+  .header-find {
+    position: absolute;
+    right: 55px;
+    top: 0;
+  }
+  .menu {
+    float: right;
+  }
+}
+@media screen and (max-width: 886px) {
+  .menu-inner {
+    text-align: center;
+    .menu {
+      float: none;
+      clear: both;
+    }
+  }
+}
+@media screen and (max-width: 400px) {
+  .phone {
+    width: 50%;
+  }
+  .icons {
+    width: 50%;
+  }
+}
