--- a/css/main.css
+++ b/css/main.css
@@ -66,7 +66,7 @@ article, aside, details, figcaption, figure, footer, header, hgroup, main, menu,
 }
 
 .header {
-  height: 153px;
+  padding-bottom: 15px;
   margin: 0;
 }
 
@@ -76,7 +76,7 @@ article, aside, details, figcaption, figure, footer, header, hgroup, main, menu,
   padding-top: 10px;
 }
 .contacts-inner {
-  height: 41px;
+  padding-bottom: 15px;
   background-color: #f5f7fa;
 }
 
@@ -441,7 +441,7 @@ a {
 }
 
 .information {
-  height: 485px;
+  min-height: 485px;
   position: relative;
 }
 .information .information-content {
